--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <!-- <img src="/Images/cali.png" class="cali1" alt="" /> -->
             <div class="container">
 
-              <a href="#" class="button">
+              <a href="appeal.html" class="button">
                 <div class="button__line"></div>
                 <div class="button__line"></div>
                 <span class="button__text">SUBMITTING AN APPEAL</span>
